css/styles.css
 /* One For All */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
/* Page */
body {
    background-color: rgb(223, 223, 223);
    font-size: 16px;
    margin: 0px;
    font-family: "Red Rose", "Courier New", Courier, monospace;
    line-height: 50px;
    place-items: center;
}
main {
    display: grid;
    place-items: center;
}
.name {
    color: white;
}
p {
    line-height: 25px;
    margin: 15px;
    text-align: center;
}
img {
    max-width: 100%;
    height: auto;
    max-height: 100%;
}
/* Header */
.main-nav {
    font-weight: 800;
    text-transform: uppercase;
    overflow: hidden;
}

.wrapper {
    color: black;
    font-size: 1.125em;
    text-align: center;
    background-color: rgb(0, 0, 0);
    padding: 15px;
}
.navbar li {
    background-color: white;
    margin: 10px;
    line-height: 20px;
    padding: 10px;
    border-radius: 30px;
}
.main-header {
    display: flex;
    flex-direction: column;
}

ul {
    list-style-type: none;
}
a {
    color: black;
    text-decoration: none;
}

.portfolio-container {
    text-align: center;
    margin: 20px;
}
.profile-picture{
    align-content: center;
}
.portfolio-bio {
    text-align: center;
}
/* Main */
.portfolio-title {
    text-align: center;
}
.skills-container {
    align-content: center;
    background-color: rgb(255, 255, 255);
    place-items: center;
}
.skills {
    justify-content: space-between;
    vertical-align: middle;
}
.frame {
    text-align: center;
    display: table-cell;
    position: relative;
}
.contact {
    text-align: center;
    margin: 30px;
    line-height: 20px;
}

/* Footer */
hr {
    margin: 20px;
    color: lightgray;
}
.main-footer {
    margin: 20px;
}
.footer-nav li {
    list-style-type: none;
}

.mobile-footer {
    float: left;
    font-weight: 800;
}
.mobile-footer-too {
    float: right;
    font-weight: 800;
}

/* Mobile First */
@media (max-width: 767px) {
    .footer-nav .hidden-footer {
        display: none;
    }
}

@media (min-width: 768px) {
    p {
        line-height: 30px;
    }
    
    .home,
    .portfolio,
    .contact-section {
        color: white;
    }
    .navbar li {
        margin: 30px;
    }
    .portfolio-container {
        float: left;
        padding: 20px;
    }
    .portfolio-bio {
        text-align: left;
        margin: auto;
        padding: 20px;
    }
    .profile-picture {
        float: right;
        vertical-align: middle;
        overflow: auto;
    }
    .frame {
        float: left;
    }
    .main-img{
        width: 95%;
    }
    .marketing,
    .search,
    .travel,
    .map,
    .gallery,
    .calc {
        width: 50%;
        /* max-height: 100%; */
    }
    .main-nav li {
        display: inline-block;
        width: 20%;
        
    }
    .skills-container {
        margin: auto 0;
    }
  
    .footer-nav .mobile-footer {
        float: left;
    }
    .footer-nav li {
        float: right;
        margin: 15px;
    }
    /* .footer-nav li {
        margin: 15px;
        float: right;
    } */
    .contact-section {
        padding: 80px;
    }
    .hidden-footer {
        font-weight: 800;
        text-transform: uppercase;
    }
    .mobile-footer-too {
        display: none;
    }
    /* Float Clearfix */
.clearfix::after {
    content: " ";
    display: table;
    clear: both;
}
    
}
@media (min-width: 1024px) {
    .wrapper {
        /* position: relative;
        overflow: hidden; */
    }
    .name {
        float: left;
        margin: 40px;
    }
    .main-nav {
        margin-top: 15px;
    }
    .main-nav li {
        display: inline-block;
    }
    .marketing,
    .search,
    .travel,
    .map,
    .gallery,
    .calc {
        width: 33.33%;
    }
    .main-img {
        width: 95%;
    }
    .skills-wrapper {
        margin: 5px;
    }
}

